--- a/app/src/main/res/layout/fragment_cardio.xml
+++ b/app/src/main/res/layout/fragment_cardio.xml
@@ -75,9 +75,7 @@
                     android:id="@+id/text_view_5km_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
+                    style="@style/RecordValueTextAppearance"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="22:04" />
@@ -86,9 +84,9 @@
                     android:id="@+id/text_view_5km_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    style="@style/RecordDateTextAppearance"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="sans-serif-light"
-                    android:textSize="16sp"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/text_view_5km_value"
                     tools:text="05/18/2025" />
@@ -124,9 +122,8 @@
                     android:id="@+id/text_view_10km_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
+                    style="@style/RecordValueTextAppearance"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="22:04" />
@@ -135,9 +132,9 @@
                     android:id="@+id/text_view_10km_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    style="@style/RecordDateTextAppearance"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="sans-serif-light"
-                    android:textSize="16sp"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/text_view_10km_value"
                     tools:text="05/18/2025" />
@@ -173,9 +170,8 @@
                     android:id="@+id/text_view_half_marathon_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
+                    style="@style/RecordValueTextAppearance"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="22:04" />
@@ -184,6 +180,8 @@
                     android:id="@+id/text_view_half_marathon_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    style="@style/RecordDateTextAppearance"
+
                     android:layout_marginTop="16dp"
                     android:fontFamily="sans-serif-light"
                     android:textSize="16sp"
@@ -222,9 +220,7 @@
                     android:id="@+id/text_view_marathon_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
+                    style="@style/RecordValueTextAppearance"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="22:04" />
@@ -234,8 +230,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="sans-serif-light"
-                    android:textSize="16sp"
+                    style="@style/RecordDateTextAppearance"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/text_view_marathon_value"
                     tools:text="05/18/2025" />
