--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lightGrey">#B6B6B6</color>
+    <color name="dark_grey">#323232</color>
+    <color name="blue_grey_600">#546e7a</color>
+    <color name="blue_grey_200">#b0bec5</color>
+    <color name="orange_600">#fb8c00</color>
 </resources>
