--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,8 +3,30 @@
     <style name="Base.Theme.RecordKeeper" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimary">@color/blue_grey_600</item>
+        <item name="colorPrimaryVariant">@color/blue_grey_200</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorTertiary">@color/blue_grey_200</item>
+        <item name="colorOnBackground">@color/dark_grey</item>
     </style>
 
     <style name="Theme.RecordKeeper" parent="Base.Theme.RecordKeeper" />
+
+    <style name="RecordNameTextAppearance">
+        <item name="fontFamily">sans-serif</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="RecordValueTextAppearance">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">?attr/colorOnBackground</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+    </style>
+
+    <style name="RecordDateTextAppearance">
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textSize">16sp</item>
+
+    </style>
 </resources>
